fix - admin.css - z-index for responsive dropdown

--- a/assets/admin.css
+++ b/assets/admin.css
@@ -609,10 +609,11 @@ div.log_summary table tr:first-child button#logs_filter::before {
 	right: 14px;
 	border-radius: 5px;
 	border: 1px solid rgba( 50, 50, 48, .2 );
-	z-index:1000;
+	z-index:1;
 }
 .sv_setting_responsive_select:hover{
 	height:auto;
+	z-index:1024;
 }
 .sv_setting_responsive_select > *{
 	width:15px;
